# medinsight

./: .dockerignore  .env.example  .gitignore  .watchfilesignore  AZURE_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  QUICKSTART.md  README.md  TEST_QUERIES_BLOOD_COUNT.md  alembic.ini  azure-setup.ps1  azure-setup.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_ext.py  test_features.py  test_llm.py
.github/workflows/: azure-deploy.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 1724a233d021_add_lab_references.py  a3b4c5d6e7f8_restructure_schema.py  c8f01dedd1e7_initial_schema.py  fix_unique_constraint.py
app/agents/: __init__.py  a2a_protocol.py  graph.py  orchestrator.py  rag_agent.py  report_agent.py  report_generator_agent.py  state.py  synthesis_agent.py  text_to_sql_agent.py  trend_agent.py
data/: standard_reference_ranges.txt
docs/: ETHICS.md  agents.md  api_reference.md  rag_pipeline.md
evaluation/: extraction_eval.py  rag_eval.py  ragas_eval.py  sql_eval.py
scripts/: check_data.py  check_kb.py  cleanup_and_reingest.py  enrich_lab_references.py  fix_failed.py  generate_custom_pdf.py  generate_demo_pdfs.py  generate_pdfs.py  generate_progressive_reports.py  ingest_knowledge_base.py  scrape_medlineplus.py  seed_db.py  seed_demo_data.py  test_agents.py
tests/: conftest.py  test_agents.py  test_agents_unit.py  test_api_endpoints.py  test_auth.py  test_categories.py  test_extraction_agent.py  test_mcp.py  test_memory.py  test_pdf_extraction.py  test_rag_agent.py  test_safeguards.py  test_trend_agent.py
(+73 files in other folders)
