[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "evaluation*", "scripts*"]

[project]
name = "medinsight"
version = "1.0.0"
description = "Medical lab report analyzer — AI-powered clinical insights"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["."]
venvPath = "."
venv = ".venv312"

[tool.watchfiles]
ignore_paths = [
    ".venv312",
    "__pycache__",
    ".git",
    "data",
    "medinsight.egg-info",
    "alembic",
]
